<resources>
    <!-- Post editing -->
    <string name="lbl_brightness">Brightness</string>
    <string name="lbl_contrast">Contrast</string>
    <string name="lbl_saturation">Saturation</string>
    <string name="tab_filters">Filters</string>
    <string name="edit">Edit</string>
    <string name="filter_thumbnail">Thumbnail of filter</string>
    <string name="normal_filter">Normal</string>
    <string name="busy_dialog_text">Still processing image, wait for that to finish first!</string>
    <string name="busy_dialog_ok_button">OK, wait for that.</string>
    <string name="crop_result_error">"Couldn't retrieve image after crop"</string>
    <string name="image_preview">Preview of the image being edited</string>
    <string name="crop_button">Button to crop or rotate the image</string>
    <string name="save_before_returning">Save your edits?</string>
    <string name="no_cancel_edit">No, cancel edit</string>
    <string name="error_editing">Error while editing</string>
    <string name="toolbar_title_edit">Edit</string>
    <string name="stabilize_video">Stabilize video</string>
    <string name="stabilize_video_intensity">Change intensity of stabilization</string>
    <string name="save_image_failed">Unable to save image</string>
    <string name="save_image_success">Image successfully saved</string>
    <string name="mute_video">Mute video</string>
    <string name="save_crop">Save crop</string>
    <string name="video_crop">Crop video</string>
    <string name="select_video_range">Select what to keep of the video</string>
    <string name="video_speed">Change video speed</string>
    <string name="crop_saved">Crop saved</string>
    <string name="stabilization_saved">Stabilization saved</string>
    <string name="thumbnail_reel_video_edit">Reel showing thumbnails of the video you are editing</string>
    <string name="reset_edit_menu">RESET</string>
    <string name="save_edit_menu">SAVE</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_changes_save">No changes were made to the image. Save a copy?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="filterBlackAndWhite"><![CDATA[B&W]]></string>
    <string name="filterElsa">Elsa</string>
    <string name="filterFrost">Frost</string>
    <string name="filterMars">Mars</string>
    <string name="filterNegative">Negative</string>
    <string name="filterRand">Rand</string>
    <string name="filterSepia">Sepia</string>
    <string name="filterVignette">Vignette</string>
    <string name="filterVintage">Vintage</string>
    <string name="filterNone">None</string>

</resources>