<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryContainer"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:scrollbarThumbHorizontal="@drawable/thumb_left">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:background="?attr/colorSecondaryContainer"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/toolbar_title_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.media2.widget.VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#000000"
            app:layout_constraintBottom_toTopOf="@+id/thumbnail4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_bar" />

        <org.pixeldroid.media_editor.photoEdit.cropper.CropImageView
            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_bar" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/save_crop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/save_crop"
            android:text="@string/save_crop"
            android:visibility="gone"
            app:icon="@drawable/ic_crop_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/muter"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/mute_video"
            android:padding="4dp"
            android:src="@drawable/selector_mute"
            app:layout_constraintBottom_toTopOf="@+id/thumbnail1"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/cropper"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/video_crop"
            android:padding="4dp"
            android:src="@drawable/ic_crop_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/thumbnail1"
            app:layout_constraintStart_toEndOf="@+id/muter" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cropSavedCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/cropper"
            app:layout_constraintEnd_toEndOf="@+id/cropper"
            app:layout_constraintStart_toStartOf="@+id/cropper"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp">

                <ImageView
                    android:id="@+id/checkMarkCropped"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/check_circle_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/top_bar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/crop_saved"
                    app:layout_constraintBottom_toBottomOf="@id/checkMarkCropped"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/checkMarkCropped"
                    app:layout_constraintTop_toTopOf="@id/checkMarkCropped" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/speeder"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/video_speed"
            android:padding="4dp"
            android:src="@drawable/speed"
            app:layout_constraintBottom_toTopOf="@+id/thumbnail1"
            app:layout_constraintStart_toEndOf="@+id/cropper" />

        <ImageView
            android:id="@+id/stabilizer"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/stabilize_video"
            android:padding="4dp"
            android:src="@drawable/video_stable"
            app:layout_constraintBottom_toTopOf="@+id/thumbnail1"
            app:layout_constraintStart_toEndOf="@+id/speeder" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/stabilisation_saved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/stabilizer"
            app:layout_constraintEnd_toEndOf="@+id/stabilizer"
            app:layout_constraintStart_toStartOf="@+id/stabilizer"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp">

                <ImageView
                    android:id="@+id/checkMarkStabilize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/check_circle_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/stabilization_saved"
                    app:layout_constraintBottom_toBottomOf="@id/checkMarkStabilize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/checkMarkStabilize"
                    app:layout_constraintTop_toTopOf="@id/checkMarkStabilize" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.slider.RangeSlider
            android:id="@+id/videoRangeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="-15dp"
            android:layout_marginEnd="-15dp"
            android:contentDescription="@string/select_video_range"
            android:elevation="5dp"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/thumbnail1" />

        <ImageView
            android:id="@+id/thumbnail1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:contentDescription="@string/thumbnail_reel_video_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/thumbnail2" />

        <ImageView
            android:id="@+id/thumbnail2"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:contentDescription="@string/thumbnail_reel_video_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/thumbnail1"
            app:layout_constraintRight_toLeftOf="@+id/thumbnail3" />

        <ImageView
            android:id="@+id/thumbnail3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:contentDescription="@string/thumbnail_reel_video_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/thumbnail2"
            app:layout_constraintRight_toLeftOf="@+id/thumbnail4" />

        <ImageView
            android:id="@+id/thumbnail4"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:contentDescription="@string/thumbnail_reel_video_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/thumbnail3"
            app:layout_constraintRight_toLeftOf="@+id/thumbnail5" />

        <ImageView
            android:id="@+id/thumbnail5"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:contentDescription="@string/thumbnail_reel_video_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/thumbnail4"
            app:layout_constraintRight_toLeftOf="@+id/thumbnail6" />

        <ImageView
            android:id="@+id/thumbnail6"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:contentDescription="@string/thumbnail_reel_video_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/thumbnail5"
            app:layout_constraintRight_toLeftOf="@+id/thumbnail7" />

        <ImageView
            android:id="@+id/thumbnail7"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:contentDescription="@string/thumbnail_reel_video_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/thumbnail6"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>